src/objects/Credential__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>DNCR_End_Url__c</fullName>
        <label>DNCR End Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNCR_Tele_Marketer_Id__c</fullName>
        <label>DNCR Tele Marketer Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNCR_Tele_Marketer_Password__c</fullName>
        <label>DNCR Tele Marketer Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mercury_Application__c</fullName>
        <label>Mercury Application</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mercury_Domain__c</fullName>
        <label>Mercury Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mercury_Login_End_Point__c</fullName>
        <label>Mercury Login End Point</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mercury_Password__c</fullName>
        <description>Mercury Credential</description>
        <label>Mercury Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mercury_Username__c</fullName>
        <description>Mercury Login Credential</description>
        <label>Mercury Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pardot_User_Key__c</fullName>
        <label>Pardot User Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Email__c</fullName>
        <label>User Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Password__c</fullName>
        <label>User Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Credentials</label>
</CustomObject>